@@ -1,5 +1,6 @@
 # Generated by roxygen2 (4.1.0): do not edit by hand
 
+S3method(as.character,html)
 S3method(as.character,shiny.tag)
 S3method(as.character,shiny.tag.list)
 S3method(as.tags,character)
