@@ -457,3 +457,43 @@ test_that("Non-tag objects can be coerced", {
   expect_identical(result2$singletons, "110d1f0ef6762db2c6863523a7c379a697b43ea3")
 
 })
+
+test_that("Latin1 and system encoding are converted to UTF-8", {
+  expect_identical(Encoding("\377"), "latin1")
+  divLatin1 <- as.character(tags$div("\377"))
+  expect_identical(
+    charToRaw(divLatin1),
+    as.raw(c(0x3c, 0x64, 0x69, 0x76, 0x3e, 0xc3, 0xbf, 0x3c, 0x2f,
+      0x64, 0x69, 0x76, 0x3e))
+  )
+  expect_identical(Encoding(divLatin1), "UTF-8")
+
+  expect_identical(Encoding("\u4E11"), "UTF-8")
+  divUTF8 <- as.character(tags$div("\u4E11"))
+  expect_identical(
+    charToRaw(divUTF8),
+    as.raw(c(0x3c, 0x64, 0x69, 0x76, 0x3e, 0xe4, 0xb8, 0x91, 0x3c,
+      0x2f, 0x64, 0x69, 0x76, 0x3e))
+  )
+  expect_identical(Encoding(divUTF8), "UTF-8")
+
+  divMixed <- format(tags$div(
+    tags$span(a="\u4E11", "\377"),
+    tags$span(b="\377", HTML("\u4E11"))
+  ))
+  expect_identical(
+    charToRaw(divMixed),
+    as.raw(c(0x3c, 0x64, 0x69, 0x76, 0x3e, 0x0a, 0x20, 0x20, 0x3c,
+      0x73, 0x70, 0x61, 0x6e, 0x20, 0x61, 0x3d, 0x22, 0xe4, 0xb8, 0x91,
+      0x22, 0x3e, 0xc3, 0xbf, 0x3c, 0x2f, 0x73, 0x70, 0x61, 0x6e, 0x3e,
+      0x0a, 0x20, 0x20, 0x3c, 0x73, 0x70, 0x61, 0x6e, 0x20, 0x62, 0x3d,
+      0x22, 0xc3, 0xbf, 0x22, 0x3e, 0xe4, 0xb8, 0x91, 0x3c, 0x2f, 0x73,
+      0x70, 0x61, 0x6e, 0x3e, 0x0a, 0x3c, 0x2f, 0x64, 0x69, 0x76, 0x3e
+    ))
+  )
+  expect_identical(Encoding(divMixed), "UTF-8")
+
+  expect_identical(Encoding(HTML("\377")), "latin1")
+  expect_identical(Encoding(format(HTML("\377"))), "UTF-8")
+  expect_identical(Encoding(format(tagList("\377"))), "UTF-8")
+})
